--- a/public/styles.css
+++ b/public/styles.css
@@ -21,6 +21,7 @@ h2{
     font-size: 40px;
     font-family: 'Montserrat';
     font-weight: 600;
+    margin-left: 6rem;
 }
 p{
     font-family: 'Montserrat';
@@ -41,6 +42,27 @@ align-content: center;
     font-weight: 700;
     font-size: 25px;
 
+}
+.save{
+    color:black;
+    font-family: 'Montserrat';
+    font-weight: 600;
+    font-size: 25px;
+
+
+}
+
+.text3{
+    font-family: 'Montserrat';
+    font-size: medium;
+     font-weight:600 ;
+     margin-left:10rem ;
+}
+.text4{
+    font-family: 'Montserrat';
+    font-size: medium;
+     font-weight:600 ;
+     
 }
 .side-text{
     font-family: 'Montserrat';
@@ -82,6 +104,29 @@ form{
 .logo{
     margin-left: auto;
     margin-bottom: auto;
+}
+.card{
+    height:250px;
+    width:250px;
+    font-family: 'Montserrat';
+    font-size: 30px;
+    background-color: #eede53;
+    font-weight: 600;
+    margin:10px 10px 10px 10px;
+    display: inline-block;
+    
+
+}
+.card:hover{
+    background-color: #FCE944;
+}
+#hint-text{
+    font-size:15px;
+}
+.small-text{
+    font-size:10px;
+    font-family: 'Montserrat';
+
 }
 
 
