--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <section class="jumbo">
 <div class="container ">
    
-    <h1 class="main-head text-center"> <img src="/images/logo.jpg" alt="" class="logo" height="150px" width="150px" /> WORDict </h1>
+    <h1 class=" text-center"> <img src="/images/logo.jpg" alt="" class="logo" height="100px" width="100px" /> <%=varname%> </h1>
     <p class="text-center a-text">Tired of searching in a dictionary?<br>
         Learn new words with ease now.<br><br>
         <button type="button" class="btn btn-light btn-lg reg-buttons btn1"><a class="nav-link " href="#signup"><span
@@ -25,13 +25,14 @@
          
         </div>
         <div class="col-lg-4">
-            <h1>Register</h1>
+            <h2>Register</h2>
         </div>
     </div>
         <div class="row">
           
             <div class="col">
                 <p class=side-text>
+                    <br><br><br>
                     Fell upon a new word? You dont need to note <br> it down anymore, Wordict will do it for you. <br>
                     <!-- Wordict serves the purpose of improving one's vocabulary anytime ,anywhere based on personal requirements -->
                
@@ -40,7 +41,8 @@
                  which you can refer to anytime, anywhere. <br><br>
                  
                 </p>  
-               <h2>Save trees and effort!</h2>
+                <span class="save">Save trees and effort!</span>
+               
                 
             </div>
             <div class="col-lg-4" id="signup">
@@ -53,7 +55,7 @@
              
                  
                  <form action="/" method="post">
-                      <input type="text"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
+                      <input type="email"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
                      <input type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
                      <input type="password" class="form-text" name="pass2" id="pass2" placeholder="&#xf09c  Confirm password"><br><br>
                     <button type="submit" class="btn btn-dark btn-sm reg-buttons"><span
