--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,11 +39,11 @@
                  which you can refer to anytime, anywhere. <br><br>
                  
                 </p>  
-               <h2>Save trees and effort!</h2><br>
+                <span class="save">Save trees and effort!</span>
                 
             </div>
             <div class="col-lg-4" id="signup">
-              <h2>Sign-In</h2><br>
+              <br><h2>Sign-In</h2><br>
      
      
         
