tag line change

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <div class="container ">
    
     <h1 class=" text-center"> <img src="/images/logo.jpg" alt="" class="logo" height="100px" width="100px" /> <%=varname%> </h1>
-    <p class="text-center a-text">Tired of searching in a dictionary?<br>
+    <p class="text-center a-text">Create your own dictionary?<br>
         Learn new words with ease now.<br><br>
         <button type="button" class="btn btn-light btn-lg reg-buttons btn1"><a class="nav-link " href="#signup"><span
                     class="text1">Sign Up</span></a></button>
