--- a/views/login.ejs
+++ b/views/login.ejs
@@ -51,7 +51,7 @@
                     <input type="text"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
                    <input type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
                   
-                  <button type="submit" class="btn btn-dark btn-md reg-buttons btn1 submit"><span
+                  <button type="submit" class="btn btn-dark btn-md  btn1 "><span
                        class="text2">LogIn</span></button>
                </form>
              
