--- a/views/mismatch.ejs
+++ b/views/mismatch.ejs
@@ -1,3 +1,3 @@
 <%-include("header")-%>
-<h2>Passwords dont match</h2>
+<h2>Passwords dont match or no password entered</h2>
 <%-include("footer")-%>
