--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap"
         rel="stylesheet">
         <script src="https://use.fontawesome.com/07777d63cf.js"></script>
-    <title>Document</title>
+    <title>my-wordict</title>
 </head>
 
 <body>
