--- a/views/main.ejs
+++ b/views/main.ejs
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap"
         rel="stylesheet">
         <script src="https://use.fontawesome.com/07777d63cf.js"></script>
-    <title>Document</title>
+    <title>my-wordict</title>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
         <div class="col-lg-4"></div>
         <div class="col-lg-4">
             <form action="/main" method="post">
-                <input type="text" class="form-text" name="word" id="word"
+                <input type="text" width="200px" class="form-text" name="word" id="word"
                     placeholder=" &#xf002  I want to know the meaning of..">
                 <br>
 
