--- a/views/main.ejs
+++ b/views/main.ejs
@@ -59,7 +59,7 @@
         <div class="col-lg-4"></div>
         <div class="col-lg-4">
             <form action="/main" method="post">
-                <input type="text" width="200px" class="form-text" name="word" id="word"
+                <input size="40" type="text"  class="form-text" name="word" id="word"
                     placeholder=" &#xf002  I want to know the meaning of..">
                 <br>
 
