--- a/views/main.ejs
+++ b/views/main.ejs
@@ -59,8 +59,8 @@
         <div class="col-lg-4"></div>
         <div class="col-lg-4">
             <form action="/main" method="post">
-                <input size="30" type="text"  class="form-text" name="word" id="word"
-                    placeholder=" &#xf002  I want to know the meaning of..">
+                <input  type="text"  class="form-text" name="word" id="word"
+                    placeholder=" &#xf002 the meaning of..">
                 <br>
 
                 <button type="submit" class="btn btn-dark btn-md text3" formaction="/main"><span>define</span></button>
