--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,20 +1,6 @@
 
 
-        <!-- <div class="row">
-            <div class="col">
-                <p class="text-left a-text">Welcome to Wordict.<br>Create an account and get started!</p><br>
-     
-     
-        
-       
-             
-             
-                 
-                 
-            </div>
-           
-            
-        </div> -->
+    
         <%-include("header")-%><br><br>
 <div class="container">
    
@@ -43,11 +29,11 @@
                 
             </div>
             <div class="col-lg-4" id="signup">
-              <br><h2>Sign-In</h2><br>
+              <br><h2 text-left>Sign-In</h2><br>
      
      
         
-                <form action="/login" method="post">
+                <form  action="/login" method="post">
                     <input type="text"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
                    <input type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
                   
