--- a/views/main.ejs
+++ b/views/main.ejs
@@ -58,10 +58,10 @@
     <div class="row">
         <div class="col-lg-4"></div>
         <div class="col-lg-4">
-            <form action="/main" method="post">
+            <form class="linear-form" action="/main" method="post">
                 <input  type="text"  class="form-text" name="word" id="word"
                     placeholder=" &#xf002 the meaning of..">
-                <br>
+               
 
                 <button type="submit" class="btn btn-dark btn-md text3" formaction="/main"><span>define</span></button>
             
