--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
                 
             </div>
             <div class="col-lg-4" id="signup">
-              <br><h2 text-left>Sign-In</h2><br>
+              <br><h2 class=" text-left">Sign-In</h2><br>
      
      
         
