--- a/views/main.ejs
+++ b/views/main.ejs
@@ -59,7 +59,7 @@
         <div class="col-lg-4"></div>
         <div class="col-lg-4">
             <form class="linear-form" action="/main" method="post">
-                <input  type="text"  class="form-text" name="word" id="word"
+                <input size="25" type="text"  class="form-text" name="word" id="word"
                     placeholder=" &#xf002 the meaning of..">
                <br>
 
