--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
    
         <div class="row">
           
-            <div class="col">
+            <div class="col-lg-5">
                 <p class=side-text>
                     Fell upon a new word? You dont need to note <br> it down anymore, Wordict will do it for you. <br>
                     <!-- Wordict serves the purpose of improving one's vocabulary anytime ,anywhere based on personal requirements -->
@@ -28,8 +28,8 @@
                 <span class="save">Save trees and effort!</span>
                 
             </div>
-            <div class="col-lg-4" id="signup">
-              <br><h2 class=" text-left">Sign-In</h2><br>
+            <div class="col-lg-5" id="signup">
+              <br><h2 class=" ">Sign-In</h2><br>
      
      
         
