--- a/views/main.ejs
+++ b/views/main.ejs
@@ -71,7 +71,7 @@
     </div>
     <br><br>
 
-    <div class="container row">
+    <div class="container row" id="cont-mar">
        <% for(var i=0;i<wl.length;i++){%>
             <div class="col-lg-3 card  text-center">
                 <%= wl[i] %> <br>
