--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,6 +28,7 @@
                 <span class="save">Save trees and effort!</span>
                 
             </div>
+            <div class="col-lg-2"></div>
             <div class="col-lg-5" id="signup">
               <br><h2 class=" ">Sign-In</h2><br>
      
