--- a/views/main.ejs
+++ b/views/main.ejs
@@ -60,7 +60,7 @@
         <div class="col-lg-4">
             <form class="linear-form" action="/main" method="post">
                 <input size="25" type="text"  class="form-text" name="word" id="word"
-                    placeholder=" &#xf002 the meaning of..">
+                    placeholder=" &#xf002 get me the meaning of..">
                <br>
 
                 <button type="submit" class="btn btn-dark btn-md text3" formaction="/main"><span>define</span></button>
