--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
             </div>
             <div class="col-lg-2"></div>
             <div class="col-lg-5" id="signup">
-              <br><h2 class=" ">Sign-In</h2><br>
+              <br><h2><span class="text-left ">Sign-In</span></h2><br>
      
      
         
