--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,8 +35,8 @@
      
         
                 <form  action="/login" method="post">
-                    <input type="text"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
-                   <input type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
+                    <input size="25" type="text"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
+                   <input size="25" type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
                   
                   <button type="submit" class="btn btn-dark btn-md  btn1 "><span
                        class="text2">LogIn</span></button>
