--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,7 +39,7 @@
                    <input size="25" type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
                   
                   <button type="submit" class="btn btn-dark btn-md  btn1 "><span
-                       class="text2">LogIn</span></button>
+                       class="text2 center-btn">LogIn</span></button>
                </form>
              
              
