--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,15 +32,17 @@
             <div class="col-lg-5" id="signup">
               <br><h2><span class="text-left ">Sign-In</span></h2><br>
      
-     
+     <div class="form-div">
+        <form  action="/login" method="post">
+            <input size="25" type="text"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
+           <input size="25" type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
+          
+          <button type="submit" class="btn btn-dark btn-md  btn1 "><span
+               class="text2 ">LogIn</span></button>
+       </form>
+     </div>
         
-                <form  action="/login" method="post">
-                    <input size="25" type="text"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
-                   <input size="25" type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
-                  
-                  <button type="submit" class="btn btn-dark btn-md  btn1 "><span
-                       class="text2 center-btn">LogIn</span></button>
-               </form>
+              
              
              
                  
