--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,13 +29,13 @@
                 
             </div>
             <div class="col-lg-2"></div>
-            <div class="col-lg-5" id="signup">
-              <br><h2><span class="text-left ">Sign-In</span></h2><br>
+            <div class="col-lg-4" id="signup">
+              <br><h2><span class="text-center ">Sign-In</span></h2><br>
      
      <div class="form-div">
         <form  action="/login" method="post">
-            <input size="25" type="text"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
-           <input size="25" type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
+            <input size="20" type="text"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
+           <input size="20" type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
           
           <button type="submit" class="btn btn-dark btn-md  btn1 "><span
                class="text2 ">LogIn</span></button>
