--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,7 +33,7 @@
               
      
      <div class="form-div">
-        <br><h2><p class="text-left">Sign-In</p></h2><br>
+        <br><h2><p class="text-left slight">Sign-In</p></h2><br>
         <form  action="/login" method="post">
             <input size="20" type="text"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
            <input size="20" type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
