--- a/public/styles.css
+++ b/public/styles.css
@@ -151,7 +151,8 @@ form{
     display: inline;
 }
 #cont-mar{
-    margin-left: 55px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .center-btn{
     margin-left: 18px;
