--- a/public/styles.css
+++ b/public/styles.css
@@ -151,8 +151,7 @@ form{
     display: inline;
 }
 #cont-mar{
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 85;
 }
 .center-btn{
     margin-left: 18px;
