--- a/public/styles.css
+++ b/public/styles.css
@@ -151,7 +151,7 @@ form{
     display: inline;
 }
 #cont-mar{
-    margin-left: 85;
+    margin-left: 85px;
 }
 .center-btn{
     margin-left: 18px;
