--- a/views/main.ejs
+++ b/views/main.ejs
@@ -57,7 +57,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-4"></div>
-        <div class="col-lg-4">
+        <div class="col12 col-lg-4 ">
             <form class="linear-form" action="/main" method="post">
                 <input size="25" type="text"  class="form-text" name="word" id="word"
                     placeholder=" &#xf002 get me the meaning of..">
@@ -67,7 +67,7 @@
             
             </form>
         </div>
-        <div class="col-lg-4"></div>
+        <div class="col-12 col-lg-4"></div>
     </div>
     <br><br>
 
