--- a/views/main.ejs
+++ b/views/main.ejs
@@ -58,12 +58,12 @@
     <div class="row">
         <div class="col-lg-4"></div>
         <div class="col12 col-lg-4 ">
-            <form class="linear-form row" action="/main" method="post">
-                <input size="25" type="text"  class="form-text col-8" name="word" id="word"
+            <form class=" row" action="/main" method="post">
+                <input size="25" type="text"  class=" col-8" name="word" id="word"
                     placeholder=" &#xf002 get me the meaning of..">
                
 
-                <button type="submit" class="btn btn-dark btn-md text3 col-4" formaction="/main"><span>define</span></button>
+                <button type="submit" class="btn btn-dark btn-md  col-4" formaction="/main"><span>define</span></button>
             
             </form>
         </div>
