--- a/views/main.ejs
+++ b/views/main.ejs
@@ -62,8 +62,8 @@
                 <input size="25" type="text"  class=" col-8" name="word" id="word"
                     placeholder=" &#xf002 get me the meaning of..">
                
-
-                <button type="submit" class="btn btn-dark btn-md  col-4" formaction="/main"><span>define</span></button>
+                    <div class="col-1"></div>
+                <button type="submit" class="btn btn-dark btn-md sub-txt col-3" formaction="/main"><span>define</span></button>
             
             </form>
         </div>
