--- a/views/main.ejs
+++ b/views/main.ejs
@@ -60,7 +60,7 @@
         <div class="col12 col-lg-4 ">
             <form class=" row" action="/main" method="post">
                 <input size="25" type="text"  class=" col-8" name="word" id="word"
-                    placeholder=" &#xf002 get me the meaning of..">
+                    placeholder=" &#xf002 get me the meaning..">
                
                     <div class="col-1"></div>
                 <button type="submit" class="btn btn-dark btn-md sub-txt col-3" formaction="/main"><span>define</span></button>
