--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,8 +3,12 @@
     
         <%-include("header")-%><br><br>
 <div class="container">
-   
-    <h1 class=" text-center"> <img src="/images/logo.jpg" alt="" class="logo" height="80px" width="80px" /> Welcome to WORDict </h1>
+   <div class="row">
+       <div class="col-12">
+        <h1 class=" text-center"> <img src="/images/logo.jpg" alt="" class="logo" height="80px" width="80px" /> Welcome to WORDict </h1>
+       </div>
+   </div>
+    
    
 
 
