--- a/views/main.ejs
+++ b/views/main.ejs
@@ -39,13 +39,10 @@
 
         <h1 class=" text-center"> <img src="/images/logo.jpg" alt="" class="logo" height="100px" width="100px" /> MY
             WORDict </h1>
-        <!-- <p class="text-center a-text">Tired of searching in a dictionary?<br>
-        Learn new words with ease now.<br><br>
-        <button type="button" class="btn btn-light btn-lg reg-buttons btn1"><a class="nav-link " href="#signup"><span
-                    class="text1">Sign Up</span></a></button>
-        <button type="button" class="btn btn-dark btn-lg reg-buttons"><a class="nav-link " href="/login"><span
-                    class="text2">Login</span></a></button>
-    </p> -->
+         <p class="text-center a-text">[ virtual notebook ]</p>
+         <p class="text-center a-text">hover/tap on word to see meaning!</p>
+
+    
 
 
     </div>
