--- a/views/main.ejs
+++ b/views/main.ejs
@@ -39,14 +39,16 @@
 
         <h1 class=" text-center"> <img src="/images/logo.jpg" alt="" class="logo" height="100px" width="100px" /> MY
             WORDict </h1>
-         <p class="text-center a-text">[ virtual notebook ]</p>
-         <p class="text-center a-text">hover/tap on word to see meaning!</p>
+         <p class="text-center a-text">[ virtual notebook ] <br>
+            hover/tap on word to see meaning!
+        </p>
+         
 
     
 
 
     </div>
-    <br>
+    
     <hr class="my-4">
 </section>
 
