--- a/views/main.ejs
+++ b/views/main.ejs
@@ -39,7 +39,7 @@
 
         <h1 class=" text-center"> <img src="/images/logo.jpg" alt="" class="logo" height="100px" width="100px" /> MY
             WORDict </h1>
-         <p class="text-center a-text">[ virtual notebook ] <br>
+         <p class="text-center  light">[ virtual notebook ] <br>
             hover/tap on word to see meaning!
         </p>
          
