--- a/views/main.ejs
+++ b/views/main.ejs
@@ -23,9 +23,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav" >
           <ul class="navbar-nav">
-            <!-- <li class="nav-item ">
-              <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
-            </li> -->
+           
             <li class="nav-item">
               <a class="nav-link " href="/">HOME</a>
             </li>
@@ -39,7 +37,7 @@
 
         <h1 class=" text-center"> <img src="/images/logo.jpg" alt="" class="logo" height="100px" width="100px" /> MY
             WORDict </h1>
-         <p class="text-center  light">[ virtual notebook ] <br>
+         <p class="text-center  light">[ <i class="fa fa-book" aria-hidden="true"></i>virtual notebook ] <br>
             hover/tap on word to see meaning!
         </p>
          
