--- a/views/main.ejs
+++ b/views/main.ejs
@@ -37,7 +37,7 @@
 
         <h1 class=" text-center"> <img src="/images/logo.jpg" alt="" class="logo" height="100px" width="100px" /> MY
             WORDict </h1>
-         <p class="text-center  light">[ <i class="fa fa-book" aria-hidden="true"></i>virtual notebook ] <br>
+         <p class="text-center  light">[ virtual notebook  <i class="fa fa-book" aria-hidden="true"></i> ] <br>
             hover/tap on word to see meaning!
         </p>
          
