--- a/views/main.ejs
+++ b/views/main.ejs
@@ -56,10 +56,10 @@
         <div class="col-lg-4"></div>
         <div class="col12 col-lg-4 ">
             <form class=" row" action="/main" method="post">
-                <input size="25" type="text"  class=" col-4 " name="word" id="word"
+                <input size="25" type="text"  class=" col-8 " name="word" id="word"
                     placeholder=" &#xf002 get me the meaning..">
                
-                     <div class="col-2 "></div> 
+                     <!-- <div class="col-2 "></div>  -->
                 <button type="submit" class="btn btn-dark btn-md sub-txt col-4" formaction="/main"><span>define</span></button>
             
             </form>
