--- a/views/main.ejs
+++ b/views/main.ejs
@@ -60,7 +60,7 @@
                     placeholder=" &#xf002 get me the meaning..">
                
                      <!-- <div class="col-2 "></div>  -->
-                <button type="submit" class="btn btn-dark btn-md sub-txt col-4" formaction="/main"><span>define</span></button>
+                <button type="submit" class="btn btn-dark btn-md sub-txt col-4 rt-button" formaction="/main"><span>define</span></button>
             
             </form>
         </div>
