--- a/views/main.ejs
+++ b/views/main.ejs
@@ -51,7 +51,8 @@
 </section>
 
 <br>
-<div class="container">
+<div class="container text-center">
+    <p>
     <div class="row">
         <!-- <div class="col-lg-3"></div> -->
         <div class="col12 col-lg-4 ">
@@ -66,6 +67,7 @@
         </div>
         <div class="col-12 col-lg-4"></div>
     </div>
+</p>
     <br><br>
 
     <div class="container row" id="cont-mar">
