--- a/views/main.ejs
+++ b/views/main.ejs
@@ -51,10 +51,10 @@
 </section>
 
 <br>
-<div class="container text-center">
-    <p>
+<div class="container ">
+  
     <div class="row">
-        <!-- <div class="col-lg-3"></div> -->
+        <div class="col-lg-6"></div>
         <div class="col12 col-lg-4 ">
             <form class=" row" action="/main" method="post">
                 <input size="25" type="text"  class=" col-7 " name="word" id="word"
@@ -65,9 +65,9 @@
             
             </form>
         </div>
-        <div class="col-12 col-lg-4"></div>
+        <!-- <div class="col-12 col-lg-4"></div> -->
     </div>
-</p>
+
     <br><br>
 
     <div class="container row" id="cont-mar">
