--- a/views/main.ejs
+++ b/views/main.ejs
@@ -71,6 +71,7 @@
     <br><br>
 
     <div class="container row" id="cont-mar">
+        <div class="col-1"></div>
        <% for(var i=0;i<wl.length;i++){%>
             <div class="col-lg-3 card  text-center">
                 <%= wl[i] %> <br>
