--- a/views/main.ejs
+++ b/views/main.ejs
@@ -71,9 +71,9 @@
     <br><br>
 
     <div class="container row" id="cont-mar">
-        <div class="col-1"></div>
+        
        <% for(var i=0;i<wl.length;i++){%>
-            <div class="col-lg-3 card  text-center">
+            <div class="col-4 card  text-center">
                 <%= wl[i] %> <br>
                <div class="small-text"><%= ml[i] %></div>
        </div>
