--- a/public/styles.css
+++ b/public/styles.css
@@ -158,8 +158,8 @@ form{
     display: inline;
 }
 #cont-mar{
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 300px;
+   
     padding-left: auto;
     padding-right: auto;
 }
