--- a/public/styles.css
+++ b/public/styles.css
@@ -158,10 +158,11 @@ form{
     display: inline;
 }
 #cont-mar{
-    margin-left: 100px;
+    margin-left: auto;
+    margin-right: auto;
    
-    padding-left: auto;
-    padding-right: auto;
+    /* padding-left: auto;
+    padding-right: auto; */
 }
 .center-btn{
     margin-left: 18px;
