--- a/public/styles.css
+++ b/public/styles.css
@@ -161,8 +161,8 @@ form{
     margin-left: auto;
     margin-right: auto;
    
-    /* padding-left: auto;
-    padding-right: auto; */
+    padding-left: auto;
+    padding-right: auto;
 }
 .center-btn{
     margin-left: 18px;
