--- a/views/main.ejs
+++ b/views/main.ejs
@@ -73,7 +73,7 @@
     <div class="container row " id="cont-mar">
         
        <% for(var i=0;i<wl.length;i++){%>
-            <div class="col-12 col-lg-3 card  text-center">
+            <div class="col-12 col-md-5 col-lg-3 card  text-center">
                 <%= wl[i] %> <br>
                <div class="small-text"><%= ml[i] %></div>
        </div>
