--- a/views/main.ejs
+++ b/views/main.ejs
@@ -57,7 +57,7 @@
         <div class="col-lg-4"></div>
         <div class="col12 col-lg-4 ">
             <form class=" row" action="/main" method="post">
-                <input size="25" type="text"  class=" col-7 " name="word" id="word"
+                <input size="25" type="text"  class=" col-7 rt-button " name="word" id="word"
                     placeholder=" &#xf002 get me the meaning..">
                
                      <!-- <div class="col-2 "></div>  -->
