--- a/views/main.ejs
+++ b/views/main.ejs
@@ -54,7 +54,7 @@
 <div class="container ">
   
     <div class="row">
-        <!-- <div class="col-lg-4"></div> -->
+        <div class="col-lg-4"></div>
         <div class="col12 col-lg-4 ">
             <form class=" row" action="/main" method="post">
                 <input size="25" type="text"  class=" col-7 rt-button " name="word" id="word"
@@ -65,7 +65,7 @@
             
             </form>
         </div>
-        <!-- <div class="col-12 col-lg-4"></div> -->
+        <div class=" col-lg-4"></div>
     </div>
 </div>
 
