--- a/public/styles.css
+++ b/public/styles.css
@@ -108,6 +108,7 @@ form{
 
 
 .card{
+    height: 250px;
     
     
         font-family: 'Montserrat';
@@ -117,7 +118,7 @@ form{
     
     background-color: #eede53;
     font-weight: 600;
-    margin:10px;
+    margin:7px;
     padding-top: 20px;
     
     position: relative;
