--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,8 +56,8 @@
                  
                  <form action="/" method="post">
                       <input type="email"class="form-text"  name="username" id="username" placeholder=" &#xf007  Enter email-id"><br><br>
-                     <input type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf09c  Enter password"><br><br>
-                     <input type="password" class="form-text" name="pass2" id="pass2" placeholder="&#xf09c  Confirm password"><br><br>
+                     <input type="password"class="form-text"  name="pass1" id="pass1" placeholder="&#xf084  Enter password"><br><br>
+                     <input type="password" class="form-text" name="pass2" id="pass2" placeholder="&#xf084  Confirm password"><br><br>
                     <button type="submit" class="btn btn-dark btn-sm reg-buttons"><span
                          class="text2"><a class="nav-link">Create Account</a></span></button>
                  </form>
