--- a/views/main.ejs
+++ b/views/main.ejs
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap"
         rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet"> -->
         <script src="https://use.fontawesome.com/07777d63cf.js"></script>
     <title>my-wordict</title>
 </head>
